Mon Sep 13 14:42:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Identification_Service.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/Utils/Log.cpp:
        * orbsvcs/orbsvcs/FtRtEvent/Utils/UUID.cpp:
        * orbsvcs/orbsvcs/Notify/Name_Value_Pair.cpp:
        * orbsvcs/orbsvcs/Notify/Random_File.cpp:
        * tests/CodeSets/libs/UCS4_UTF16/WUCS4_UTF16.cpp:
          Added needed includes

Mon Sep 13 13:53:20 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Benchmark/Interceptor_Type.cpp:
          Added missing include

Mon Sep 13 13:38:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Compression/bzip2/Bzip2Compressor.mpc:
        * tao/Compression/lzo/LzoCompressor.mpc:
        * tao/Compression/zlib/ZlibCompressor.mpc:
        * tao/FlResource/FlResource.mpc:
        * tao/FoxResource/FoxResource.mpc:
        * tao/QtResource/QtResource.mpc:
        * tao/TkResource/TkResource.mpc:
          Moved these mpc files to their own directory

        * tao/Bzip2Compressor.mpc:
        * tao/FlResource.mpc:
        * tao/FoxResource.mpc:
        * tao/LzoCompressor.mpc:
        * tao/QtResource.mpc:
        * tao/TkResource.mpc:
        * tao/ZlibCompressor.mpc:
          Removed these files.

Mon Sep 13 13:29:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/PP_Memory_Management.txt:
        * tao/PP_Memory_Management.txt:
          Moved to docs

        * configure.ac:
          Removed these files.

Mon Sep 13 13:26:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Added removal of Makefile.am files

        * PROBLEM-REPORT-FORM:
          Zapped question for configure

        * tao/Utils.mpc:
        * tao/Utils/TAO_Utils.pc.in:
        * tao/TAO_Utils.pc.in:
          Moved in file to Utils

        * tao/XtResource/XtResource.mpc:
        * tao/XtResource.mpc:
          Moved to XtResource
