@@ -6,6 +6,8 @@
 #include "orbsvcs/HTIOP/HTIOP_Profile.h"
 
 #include "ace/HTBP/HTBP_Environment.h"
+#include "ace/OS_NS_strings.h"
+#include "ace/OS_NS_sys_stat.h"
 #include "tao/IOPC.h"
 
 static const char the_prefix[] = "htiop";
