@@ -21,6 +21,7 @@
 #include "ace/Get_Opt.h"
 #include "ace/Read_Buffer.h"
 #include "ace/SString.h"
+#include "ace/OS_NS_fcntl.h"
 
 static const ACE_TCHAR *iorfile = 0;
 static const ACE_TCHAR *filename = ACE_TEXT ("test");
